# python-project-52

./: .coverage  .gitignore  Makefile  README.md  build.sh  coverage.xml  manage.py  pyproject.toml  pytest.init  requirements.txt  runner.sh
.github/workflows/: pyci.yml
fixtures/: test_users.json
hexlet_code/: asgi.py  settings.py  urls.py  wsgi.py
home/: tests.py  views.py
home/templates/: base.html  delete.html  form.html  index.html  list.html  login.html
home/templates/home/: base.html  form.html  index.html  list.html  login.html
labels/: views.py
labels/templates/labels/: delete.html  form.html  list.html
statuses/: forms.py  models.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
statuses/templates/: delete.html  form.html  list.html
statuses/templates/statuses/: delete.html  form.html  list.html
task_manager/: settings.py  urls.py  views.py  wsgi.py
task_manager/home/: apps.py  signals.py  tests.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/statuses/: forms.py  models.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: __init__.py  filters.py  forms.py  models.py  tests.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_created_at.py  0003_alter_task_labels.py
task_manager/users/: apps.py  forms.py  models.py  test_views.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: test_users.json
task_manager/users/migrations/: 0001_initial.py  0002_load_initial_users.py
task_manager/users/tests/: conftest.py  testcase.py
tasks/: filters.py  forms.py  models.py  tests.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_labels.py
(+22 files in other folders)
