[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexlet-code"
version = "1.1.1"
description = "hexlet-code"

dependencies = [
    "Django==4.2.11",
    "gunicorn==21.2.0",
    "python-dotenv",
    "dj-database-url",
    "psycopg2-binary",
    "django-bootstrap5",
    "whitenoise",
    "django-filter",
    "rollbar",
]

[tool.setuptools.packages.find]
where = ["task_manager"]
include = ["task_manager*"]
