[project]
name = "hexlet-code"
version = "1.1.1"
description = "hexlet-code"
requires-python = ">=3.12.3"
dependencies = [
    "Django==4.2.11",
    "gunicorn==21.2.0",
    "python-dotenv",
    "dj-database-url==3.0.1",
    "psycopg2-binary",
    "django-bootstrap5",
    "whitenoise",
    "django-filter",
    "rollbar",
]


[tool.setuptools.packages.find]
where = ["task_manager"]
include = ["task_manager*"]

[build-system]
requires = ["hatchling"] 
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
